--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+  <h1>Spoon-Knife</h1>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Spoon-Knife</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
@@ -14,6 +15,7 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
+  Thakns for the example.
 </p>
 
 </body>
